--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+* {
+	margin: 0;
+	padding: 0;
+
+}
+
 ::selection {
 	background: #d3869b;
 }
@@ -16,9 +22,13 @@ header {
 	border-radius: 10px;
 }
 
-main {
-	max-width: 38rem;
-	padding: 2rem;
+section {
+	margin: 10px;
+	margin-top: 2rem;
+}
+
+p {
+	padding-left: 2rem;
 }
 
 a,
@@ -26,4 +36,16 @@ a:active,
 a:visited {
 	color: #b16286;
 	text-decoration: none;
+	transition: font-style .3s;
+}
+
+a:hover {
+	font-style: italic;
+}
+
+
+ul {
+	list-style-type: none;
+	padding: 1rem;
+	padding-left: 2rem;
 }
