--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@
 
 }
 
+html {
+	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+}
+
 ::selection {
 	background: var(--purple);
 }
@@ -45,7 +49,6 @@
 body {
 	background: var(--bg);
 	color: var(--fg1);
-	font-family: monospace, monospace;
 	margin: auto;
 }
 
