--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,10 @@
 }
 
 html {
-	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+	/* font-family: 'Cascadia Mono', monospace; */
+	/* font-family: 'JetBrains Mono', monospace; */
+	/* font-family: monospace; */
+	font-family: monospace, monospace;
 }
 
 ::selection {
