--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import "gruvbox.css";
+
 :root {
 	--bg_h: #1d2021;
 	--bg: #282828;
@@ -105,7 +107,31 @@ a.active {
 
 
 ul {
-	list-style-type: none;
-	padding: 1rem;
-	padding-left: 2rem;
+	list-style-type: disc;
+	/* padding: 1rem; */
+	padding-left: 4rem;
+	margin-bottom: 1rem;
+	margin-top: -1rem;
+}
+
+.embed-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	height: 0;
+	overflow: hidden;
+	max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+pre.highlight {
+	overflow: scroll;
 }
