--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,23 @@ html {
 
 body {
 	background: var(--bg);
+	background-size: 50%;
+
 	color: var(--fg1);
 	margin: auto;
+}
+
+@keyframes fade {
+	from {
+		opacity: 0.5;
+		transform: translateX(-40%) rotateY(0.2turn);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateX(0%) rotateY(0);
+
+	}
 }
 
 header {
@@ -79,6 +94,13 @@ div {
 	margin-top: 2rem;
 }
 
+body *:nth-child(n+1) {
+
+	animation: fade 0.4s ease;
+	animation-fill-mode: both;
+}
+
+
 small {
 	font-size: smaller;
 }
@@ -93,16 +115,23 @@ a:active,
 a:visited {
 	color: var(--purple-dim);
 	text-decoration: none;
-	transition: font-style .3s;
 }
 
 
-a:hover {
-	font-style: italic;
-}
 
 a.active {
 	color: var(--green);
+}
+
+a {
+
+	transition: all 0.1s ease-in-out;
+}
+
+a:hover {
+	color: #fff;
+	font-size: 1.1em;
+
 }
 
 
