Minor updates in head

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
 <html lang="en">
 
 <head>
-	<title>{{page.title}}</title>
 	<meta charset="UTF-8">
+	<title>{{page.title}} | Yogansh's Webpage</title>
+	<meta name="description" content="I am Yogansh Sharma">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="/css/style.css" rel="stylesheet">
 </head>
