Modified Meta tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{{page.title}} | Yogansh's Webpage</title>
-	<meta name="description" content="I am Yogansh Sharma">
+	<meta name="title" content="{{page.title}} | Yogansh's Webpage">
+	<meta name="description" content="personal website of Yogansh">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="/css/style.css" rel="stylesheet">
 </head>
